# global_clone

./: .gitignore  Cargo.toml  LICENSE  README.md  test_config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  rust-clippy.yml
.rpm/: global_clone.spec
src/: config.rs  lib.rs  logging.rs  main.rs
src/commands/: clone.rs  mod.rs  templates.rs
src/commands/projects/: list_projects.rs  mod.rs
src/commands/templates/: add.rs  list.rs  mod.rs  remove.rs
tests/: cli.rs
