[package]
name = "global_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = {version="0.4.0"}
serde = {version = "1.0", features = ["derive"]}
clap = { version = "3.0", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
log = "0.4.17"
pretty_env_logger = "0.4"
prettytable-rs = "^0.8"
indicatif = "0.16.2"
dialoguer = "0.10.1"
git2 = "0.14"
regex = "1"
clap_complete = "3.1.4"